Fixed bug #42211 (property_exists() fails to find protected properties from a parent class)